--- a/web/jsp/login3.html
+++ b/web/jsp/login3.html
@@ -5,9 +5,9 @@
 <title>로그인창</title>
 </head>
 <body>
-	<form name ="frmLogin" method = "post" action="SessionTest4" encType="UTF-8">
+	<form name ="frmLogin" method = "post" action="LoginServlet3" encType="UTF-8">
 	아이디 : <input type="text" name="user_id"><br>
-	비밀번호 : <input type="password" name="user_pw"><br>
+	비밀번호 : <input type="password" name="user_pwd"><br>
 	<input type="submit" value="로그인">
 	<input type="reset" value="다시입력">
 	</form>
