--- a/web/bootstrap/index.html
+++ b/web/bootstrap/index.html
@@ -270,7 +270,7 @@
 	<div class="container">
 		<p>http://www.citacampus.co.kr</p>
 		<p>게시판 예제</p>
-		<p>사업자번호 : 000-111-222</p>
+		<p>사업자번호</p>
 	</div>
 </div>
 7888</body></html>
